--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Recipes</title>
 </head>
 <body>
-    
     <H1>Recipes</H1>
-    <a href = "recipes/chicken.html">Honey Glazed Chicken</a>
-
-
+    <ul>
+        <li><a href = "recipes/chicken.html">Honey Glazed Chicken</a></li>
+        <li><a href = "recipes/beef.html">Easy Korean Beef Bowl</a></li>
+        <li><a href = "recipes/tacos.html">Salmon Tacos with Mango Salsa</a></li>
+    </ul>
 </body>
 </html>
